# AudioSmartCompressor

./: .gitignore  CMakeLists.txt  Makefile  README.md  config.h.in
SmartCompressorProj/Builds/LinuxMakefile/: Makefile
SmartCompressorProj/Builds/MacOSX/PlayingSoundFilesTutorial.xcodeproj/: project.pbxproj
SmartCompressorProj/Builds/MacOSX/PlayingSoundFilesTutorial.xcodeproj/project.xcworkspace/xcuserdata/gauravmantri.xcuserdatad/: UserInterfaceState.xcuserstate
SmartCompressorProj/Builds/VisualStudio2019/: PlayingSoundFilesTutorial_App.vcxproj  PlayingSoundFilesTutorial_App.vcxproj.filters
SmartCompressorProj/Builds/VisualStudio2022/: PlayingSoundFilesTutorial_App.vcxproj  PlayingSoundFilesTutorial_App.vcxproj.filters
includes/: fileManagement.hpp
src/: WavtoCsvText.py  fileManagement.cc  main.cc
tests/: tests.cc
